# auto-dedact

./: .gitignore  README.md  TODOs.md  docker-compose.yaml  main.py  main_self_learning.py  pyproject.toml
app/: logging_config.py
app/db/: session.py
app/db/crud/: regex_rule.py
app/db/sqlmodels/: regex_rule.py
app/detect_redact/: detection.py  redaction.py  regex_utils.py
app/embeddings/: embedding_client.py
app/llm/: llm_client.py
app/llm/tasks/: redaction_judge.py  regex_suggest.py
app/llm/workflows/: pre_learning.py  self_learning.py
app/model/: llm_responses.py  regex_rule.py  sensitive_data.py
app/models/: llm_responses.py  regex_rule.py  sensitive_data.py
app/utils/: env_validation.py
docker/initdb/: init_db.py
docs/: prdd.md
poc_scripts_and_tools/: run_fake_lm_studio.py  run_instructor_test.py
synthetic_training_data/: PII_1.txt
tests/detect_redact/: test_detection.py  test_redaction.py  test_regex_utils.py
