[project]
name = "context-sieve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "instructor>=1.13.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.128.0",
    "pytest>=9.0.2",
]
